Fixed cover button text label align

--- a/ui/cover/cover.less
+++ b/ui/cover/cover.less
@@ -41,6 +41,8 @@
 	}
 
 	.swts-button-m {
+		box-sizing: border-box;
+		padding-top: 1px;
 		margin: @ui-grid auto 0;
 		background: @cover-login-button-bg;
 		color: @cover-login-button-color !important;
